Fixed alignment with the "location" label in header

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,6 +35,10 @@ header {
 }
 
 
+.location-input {
+    align-self: center;
+}
+
 
 .logo {
     font-size: 3rem;
